--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,19 @@
 server:
- port: ${SERVER_PORT:9089}
+  port: ${SERVER_PORT:9089}
 payService:
- successProbability: 0.75
+  successProbability: 0.75
+
+project:
+  title: payment system service
+  description: proceed payment and return order with payment status
 spring:
- application:
-  name: PaySERVICE
+  application:
+    name: PaySERVICE
 logging:
- org.temkarus0070.payservice: ${LOGGING_LEVEL:INFO}
+  org.temkarus0070.payservice: ${LOGGING_LEVEL:INFO}
+
+  springfox:
+    documentation:
+      swagger:
+        v2:
+          path: /swagger/json
