--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: ${SERVER_PORT:9089}
 payService:
-  successProbability: ${SUCCESS_PROBABILITY :0.75}
+  successProbability: ${SUCCESS_PROBABILITY:0.75}
 project:
   title: payment system service
   description: proceed payment and return order with payment status
@@ -15,3 +15,9 @@ springfox:
     swagger:
       v2:
         path: /swagger/json
+
+opentracing.jaeger:
+  udp-sender:
+    host: ${JAEGER_HOST:localhost}
+    port: 6831
+  log-spans: true
